--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
         <Title>FELLAH ZAKARIYA</Title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <img src="images-2.png">
      
      <p><b>Nom:</b> FELLAH</p>
      <p><b>Prénom:</b> Zakariya</p>
