--- a/Contact.html
+++ b/Contact.html
@@ -11,17 +11,23 @@
             <a href="index.html"> <button>CV</button> </a>
             <br>
             <h2><em><b>Formulaire de Contact</b></em></h2>
-            <fieldset><legend><b><i>SAISIR INFORMATION</i></b></legend><label><input type="radio">M.</label><label><input type="radio">Mme.</label>
-            <br>
-            <legend>Nom:</legend><label><input type="Saisir ici"></label>
-            <br>
-            <legend>Prénom:</legend><label><input type="Saisir ici"></label>
-            <br>
-            <legend>E-mail:</legend><label><input type="Saisir ici"></label>
-            <br>
-            <legend>Num tel:</legend><label><input type="Saisir ici"></label></fieldset>
+            <fieldset><legend><b><i>SAISIR INFORMATION</i></b></legend><label><input id="M." type="radio" name="M.-MMe." value="M."><i> M.</i></label>
+              <label><input id="Mme." type="radio" name="M.-MMe." value="Mme."><i> Mme.</i></label>
             <br>
             <br>
-            <button>Envoyer</button>
+            <legend><i>Nom:</i></legend><label><input type="Saisir ici"></label>
+            <br>
+            <br>
+            <legend><i>Prénom:</i></legend><label><input type="Saisir ici"></label>
+            <br>
+            <br>
+            <legend><i>E-mail:</i></legend><label><input type="Saisir ici"></label>
+            <br>
+            <br>
+            <legend><i>Num tel:</i></legend><label><input type="Saisir ici"></label></fieldset>
+            <br>
+            <br>
+            <br>
+            <button><b>Envoyer</b></button>
         </body>
 </html>
