--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h2 class="subtitle">Étudiant SIO – Passionné de cybersécurité et d’informatique</h2>
     <div class="links">
       <a class="lkn" href="https://www.linkedin.com/in/zakariya-fellah-846aa6384/" target="_blank">LinkedIn</a>
-      <a id ="ct" href="contact.html" onclick="event.preventDefault(); transitionTo('contact.html');" class="lkn">Contact</a>
+      <a id ="ct" href="Contact.html" onclick="event.preventDefault(); transitionTo('Contact.html');" class="lkn">Contact</a>
     </div>
   </header>
 
