--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
 
   <!-- CSS -->
- 
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Fond grille animée -->
