--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </p>
       </div>
       <figure class="hero__figure">
-        <img src="images-2.png" alt="Photo de profil - Zakariya Fellah" class="profile-image">
+        <img src="img/images-2.png" alt="Photo de profil - Zakariya Fellah" class="profile-image">
       </figure>
     </div>
   </section>
@@ -67,7 +67,7 @@
       <a href="cv.pdf" download class="btn btn--primary btn--download">
         <i class="ri-download-cloud-line"></i> Télécharger CV
       </a>
-      <a href="Tableau de synthèse.pdf" class="btn btn--primary btn--download" target="_blank">
+      <a href="img/Tableau de synthèse.pdf" class="btn btn--primary btn--download" target="_blank">
         <i class="ri-bar-chart-line"></i> Tableau de synthèse
       </a>
     </div>
@@ -228,7 +228,7 @@
         <article class="project-card">
           <div class="project-card__left">
             <a href="https://thomas-merlen.github.io/projet-gestionnaire-tache/" class="project-image-link">
-              <img src="GDT- 2025.png" alt="Gestionnaire de Tâches" class="project-image">
+              <img src="img/GDT- 2025.png" alt="Gestionnaire de Tâches" class="project-image">
             </a>
           </div>
           <div class="project-card__right">
@@ -262,7 +262,7 @@
         <!-- Projet 2: Red Team CSAW -->
         <article class="project-card">
           <div class="project-card__left">
-            <a href="csaw2025.png" class="project-image-link">
+            <a href="img/csaw2025.png" class="project-image-link">
               <img src="csaw2025.png" alt="Red Team CSAW 2025" class="project-image">
             </a>
           </div>
@@ -296,7 +296,7 @@
         <!-- Projet 3: Infrastructure -->
         <article class="project-card">
           <div class="project-card__left">
-            <a href="CTF CNAM.png" class="project-image-link">
+            <a href="img/CTF CNAM.png" class="project-image-link">
               <img src="CTF CNAM.png" alt="Infrastructure IT" class="project-image">
             </a>
           </div>
@@ -351,7 +351,7 @@
                   <span class="cert-skill">Simulation</span>
                   <span class="cert-skill">Réseau</span>
                 </div>
-                <a href="cert1.png" class="cert-overlay-link">Voir Certificat →</a>
+                <a href="img/cert1.png" class="cert-overlay-link">Voir Certificat →</a>
               </div>
             </div>
           </article>
@@ -369,7 +369,7 @@
                   <span class="cert-skill">Réseau</span>
                   <span class="cert-skill">Protocoles</span>
                 </div>
-                <a href="cert.2.jpg" class="cert-overlay-link">Voir Certificat →</a>
+                <a href="img/cert.2.jpg" class="cert-overlay-link">Voir Certificat →</a>
               </div>
             </div>
           </article>
