--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <article class="project-card">
           <div class="project-card__left">
             <a href="img/csaw2025.png" class="project-image-link">
-              <img src="csaw2025.png" alt="Red Team CSAW 2025" class="project-image">
+              <img src="img/csaw2025.png" alt="Red Team CSAW 2025" class="project-image">
             </a>
           </div>
           <div class="project-card__right">
@@ -297,7 +297,7 @@
         <article class="project-card">
           <div class="project-card__left">
             <a href="img/CTF CNAM.png" class="project-image-link">
-              <img src="CTF CNAM.png" alt="Infrastructure IT" class="project-image">
+              <img src="img/CTF CNAM.png" alt="Infrastructure IT" class="project-image">
             </a>
           </div>
           <div class="project-card__right">
@@ -341,7 +341,7 @@
           <!-- Cert 1 -->
           <article class="cert-card-mosaic">
             <div class="cert-card-mosaic__image">
-              <img src="cert1.png" alt="Packet Tracer" class="cert-image">
+              <img src="img/cert1.png" alt="Packet Tracer" class="cert-image">
               <div class="cert-card-mosaic__overlay">
                 <div class="cert-card-mosaic__overlay-badge"><i class="ri-award-fill"></i></div>
                 <div class="cert-card-mosaic__overlay-name">Introduction to Packet Tracer</div>
@@ -359,7 +359,7 @@
           <!-- Cert 2 -->
           <article class="cert-card-mosaic">
             <div class="cert-card-mosaic__image">
-              <img src="cert.2.jpg" alt="Networking Basics" class="cert-image">
+              <img src="img/cert.2.jpg" alt="Networking Basics" class="cert-image">
               <div class="cert-card-mosaic__overlay">
                 <div class="cert-card-mosaic__overlay-badge"><i class="ri-award-fill"></i></div>
                 <div class="cert-card-mosaic__overlay-name">Networking Basics</div>
