--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
           <!-- Cert 1 -->
           <article class="cert-card-mosaic">
             <div class="cert-card-mosaic__image">
-              <img src="img/cert1.png" alt="Packet Tracer" class="cert-image">
+              <img src="img/cert.2.jpg" alt="Packet Tracer" class="cert-image">
               <div class="cert-card-mosaic__overlay">
                 <div class="cert-card-mosaic__overlay-badge"><i class="ri-award-fill"></i></div>
                 <div class="cert-card-mosaic__overlay-name">Introduction to Packet Tracer</div>
@@ -351,7 +351,7 @@
                   <span class="cert-skill">Simulation</span>
                   <span class="cert-skill">Réseau</span>
                 </div>
-                <a href="img/cert1.png" class="cert-overlay-link">Voir Certificat →</a>
+                <a href="img/cert.2.jpg" class="cert-overlay-link">Voir Certificat →</a>
               </div>
             </div>
           </article>
@@ -359,7 +359,7 @@
           <!-- Cert 2 -->
           <article class="cert-card-mosaic">
             <div class="cert-card-mosaic__image">
-              <img src="img/cert.2.jpg" alt="Networking Basics" class="cert-image">
+              <img src="img/cert1.png" alt="Networking Basics" class="cert-image">
               <div class="cert-card-mosaic__overlay">
                 <div class="cert-card-mosaic__overlay-badge"><i class="ri-award-fill"></i></div>
                 <div class="cert-card-mosaic__overlay-name">Networking Basics</div>
@@ -369,7 +369,7 @@
                   <span class="cert-skill">Réseau</span>
                   <span class="cert-skill">Protocoles</span>
                 </div>
-                <a href="img/cert.2.jpg" class="cert-overlay-link">Voir Certificat →</a>
+                <a href="img/cert1.png" class="cert-overlay-link">Voir Certificat →</a>
               </div>
             </div>
           </article>
