--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
   <!-- Bloc informations avec bouton CV -->
   <div class="infos-section">
     <div class="btn-group">
-      <a href="cv.pdf" download class="btn btn--primary btn--download">
-        <i class="ri-download-cloud-line"></i> Télécharger CV
+      <a href="img/Veille.mm" download class="btn btn--primary btn--download">
+        <i class="ri-download-cloud-line"></i> Télécharger Veille
       </a>
       <a href="img/Tableau de synthèse.pdf" class="btn btn--primary btn--download" target="_blank">
         <i class="ri-bar-chart-line"></i> Tableau de synthèse
