--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
         <!-- Projet 2: Red Team CSAW -->
         <article class="project-card">
           <div class="project-card__left">
-            <a href="img/csaw2025.png" class="project-image-link">
+            <a href="https://drive.google.com/drive/folders/1Zl6ZXZbFoD3bO0XU2QCSbkTmH62_yPT2?usp=sharing" class="project-image-link">
               <img src="img/csaw2025.png" alt="Red Team CSAW 2025" class="project-image">
             </a>
           </div>
