--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
         <!-- Projet 2: Red Team CSAW -->
         <article class="project-card">
           <div class="project-card__left">
-            <a href="https://drive.google.com/drive/folders/1Zl6ZXZbFoD3bO0XU2QCSbkTmH62_yPT2?usp=sharing" class="project-image-link">
+            <a href="https://esisar.grenoble-inp.fr/fr/recherche/csaw" class="project-image-link">
               <img src="img/csaw2025.png" alt="Red Team CSAW 2025" class="project-image">
             </a>
           </div>
@@ -455,7 +455,7 @@
               <span class="tech-tag">Forensics</span>
               <span class="tech-tag">Red Team</span>
             </div>
-            <a class="btn btn--primary project-card__btn" href="https://esisar.grenoble-inp.fr/fr/recherche/csaw" target="_blank"><i class="ri-shield-line"></i> Voir Détails</a>
+            <a class="btn btn--primary project-card__btn" href="https://drive.google.com/drive/folders/1Zl6ZXZbFoD3bO0XU2QCSbkTmH62_yPT2?usp=sharing" target="_blank"><i class="ri-shield-line"></i> Voir Détails</a>
           </div>
         </article>
 
