--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <li><a href="#formation">Formation</a></li>
       </ul>
       <div class="nav__actions">
+        <a class="social-btn" href="https://www.root-me.org/Ingenuity-exe?lang=fr#62a0d5ae462e74eb822c30d23d3cdcde" target="_blank" rel="noopener" aria-label="Root Me">
+          <img src="img/rootme.png" alt="Root Me" class="social-icon animated">
+        </a>
         <a class="social-btn" href="https://www.linkedin.com/in/zakariya-fellah-846aa6384/" target="_blank" rel="noopener" aria-label="LinkedIn">
           <i class="ri-linkedin-box-fill social-icon animated" aria-hidden="true"></i>
         </a>
